# benchwarmer

./: .gitignore  ENV_SETUP.md  ML_IMPLEMENTATION_GUIDE.md  MODEL_PARAMETERS.md  PROJECT_STRUCTURE.md  README.md  SUPABASE_SCHEMA.sql  pytest.ini  run_paper.sh
backend_ml/: .gitignore  CLEANUP_RECOMMENDATIONS.md  README.md  backtest.py  check_db.py  config.py  conftest.py  data_engine.py  elo_engine.py  ensemble_config.py  ensemble_weights.json  halflife_sweep.py  migrate_db.py  model_bias_analyzer.py  model_metadata.json  player_impact_engine.py  predict.py  publish_fair_values.py  recency.py  requirements.txt  scheduled_retrain.py  supabase_schema.sql  test_data_cache.py  test_fit_ensemble.py  test_halflife_sweep.py  test_player_impact.py  test_recency.py  test_scheduled_retrain.py  test_train_model_save.py  train_model.py  update_game_results.py
backend_ml/scripts/: com.benchwarmer.nba-retrain.plist
backend_ml/signal/: calibration.py  clv.py  config.py  market_capture.py  recalibration.py  report.py
backend_ml/signal/tests/: test_calibration.py  test_clv.py  test_dataset.py  test_market_capture.py  test_publish_recal.py  test_recalibration.py  test_report.py  test_syspath_shadow.py
backend_ml/signal_research/: clv.py  config.py  dataset.py  kalshi_auth.py  market_capture.py  model_clv.py  plots.py  recalibration.py  report.py  settlement.py
backend_ml/signal_research/tests/: test_calibration.py  test_clv.py  (+13 more)
docs/: PROJECT-OVERVIEW.md
docs/superpowers/: before-live-checklist.md
frontend_web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend_web/src/: App.jsx  index.css  supabaseClient.js
tests/: test_publish_fair_values.py
trading_engine/: .gitignore  CMakeLists.txt
trading_engine/config/: engine.json
trading_engine/src/: main.cpp
trading_engine/src/core/: config.cpp  config.hpp  types.hpp
trading_engine/src/execution/: order_venue.hpp  paper_venue.cpp  paper_venue.hpp
trading_engine/src/fair_value/: fair_value.cpp  fair_value.hpp
trading_engine/src/market_data/: gateway.cpp  gateway.hpp  gateway_run.cpp  kalshi_auth.cpp  kalshi_auth.hpp  kalshi_messages.cpp  kalshi_messages.hpp  order_book.cpp  order_book.hpp
trading_engine/src/market_map/: market_map.cpp  market_map.hpp
trading_engine/src/risk/: risk_manager.cpp  risk_manager.hpp
trading_engine/src/strategy/: arb.cpp  arb.hpp  edge_taker.cpp  edge_taker.hpp  market_maker.cpp  market_maker.hpp  pricing.cpp  pricing.hpp  strategy_engine.cpp  strategy_engine.hpp
trading_engine/src/telemetry/: telemetry.hpp
trading_engine/tests/: test_arb.cpp  test_config.cpp  test_edge_taker.cpp  test_fair_value.cpp  test_gateway.cpp  test_kalshi_auth.cpp  test_kalshi_messages.cpp  test_market_maker.cpp  test_market_map.cpp  test_order_book.cpp  test_paper_venue.cpp  test_pricing.cpp  test_replay.cpp  test_risk_manager.cpp  test_strategy_engine.cpp  test_telemetry.cpp
trading_engine/tests/fixtures/: replay_sample.jsonl
trading_engine/tools/: paper_session.cpp
(+16 files in other folders)
